[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/UI/DialogueBox.png" type="Texture" id=1]
[ext_resource path="res://Assets/Default_Theme.tres" type="Theme" id=2]
[ext_resource path="res://UI/Dialogue Box/CombatDialogueBox.gd" type="Script" id=3]

[node name="CombatDialogueBox" type="NinePatchRect"]
margin_left = -0.475708
margin_top = 0.840897
margin_right = 775.524
margin_bottom = 267.841
size_flags_horizontal = 10
size_flags_vertical = 2
theme = ExtResource( 2 )
texture = ExtResource( 1 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 46.0
margin_top = 35.0
margin_right = -46.0
margin_bottom = -60.0
size_flags_horizontal = 10
size_flags_vertical = 2
custom_constants/margin_top = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 683.0
margin_bottom = 172.0

[node name="PlayerOptions" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 99.0
margin_bottom = 172.0
rect_min_size = Vector2( 80, 0 )
size_flags_vertical = 3

[node name="CombatMenu" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PlayerOptions"]
margin_right = 99.0
margin_bottom = 172.0

[node name="AttackButton" type="Button" parent="MarginContainer/HBoxContainer/PlayerOptions/CombatMenu"]
margin_top = 10.0
margin_right = 99.0
margin_bottom = 54.0
size_flags_vertical = 10
text = "Attack"

[node name="DefendButton" type="Button" parent="MarginContainer/HBoxContainer/PlayerOptions/CombatMenu"]
margin_top = 69.0
margin_right = 99.0
margin_bottom = 113.0
size_flags_vertical = 10
text = "Defend"

[node name="RunButton" type="Button" parent="MarginContainer/HBoxContainer/PlayerOptions/CombatMenu"]
margin_top = 128.0
margin_right = 99.0
margin_bottom = 172.0
size_flags_vertical = 10
text = "Run"

[node name="InfoBox" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 683.0
margin_bottom = 172.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="InfoText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/InfoBox"]
margin_left = 10.0
margin_top = 10.0
margin_right = 570.0
margin_bottom = 162.0
text = "Attack-u Desu!"
[connection signal="focus_entered" from="MarginContainer/HBoxContainer/PlayerOptions/CombatMenu/AttackButton" to="." method="_on_AttackButton_focus_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/PlayerOptions/CombatMenu/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="focus_entered" from="MarginContainer/HBoxContainer/PlayerOptions/CombatMenu/DefendButton" to="." method="_on_DefendButton_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/HBoxContainer/PlayerOptions/CombatMenu/RunButton" to="." method="_on_RunButton_focus_entered"]
